--- a/public/chess-page.css
+++ b/public/chess-page.css
@@ -12,8 +12,28 @@ h2 {
   display: inline;
   width: 30%;
 }
+
+button {
+  /* remove default behavior */
+  appearance: none;
+  -webkit-appearance: none;
+
+  /* usual styles */
+  margin: auto;
+  margin-left: 10px;
+  padding: 5px;
+  border: none;
+  background-color: #e3edf1;
+  color: rgb(0, 0, 0);
+  font-weight: 600;
+  border-radius: 5px;
+}
+
 .colored {
   color: #5a6bc9;
+}
+.background-colored {
+  background-color: #5a6bc9;
 }
 
 .centered {
