--- a/public/chess-page.css
+++ b/public/chess-page.css
@@ -114,6 +114,9 @@ button {
 .board {
   width: 35%;
 }
+.check-square {
+  box-shadow: inset 0 0 3px 3px #F45151;
+}
 
 @media (max-width: 1000px) {
   .board {
